deployment-master/components/spring-admin/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-admin-url
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 8080
      targetPort: 8080
  selector:
    name: spring-admin
